<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Oath.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do
  ~ so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  ~ INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  ~ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN
  ~ AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  ~ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="advertisement">Advertisement</string>
    <string name="audio_tracks_title">AUDIO</string>
    <string name="text_tracks_title">SUBTITLES</string>
    <string name="track_close_title">Close</string>
    <string name="live">LIVE</string>
    <string name="play_video">play video</string>
    <string name="replay_video">replay video</string>
    <string name="pause_video">pause video</string>
    <string name="play_advertisement">play advertisement</string>
    <string name="pause_advertisement">pause advertisement</string>
    <string name="open_advertisement_link">Open advertisement link</string>
    <string name="previous_video">previous video</string>
    <string name="next_video">next video</string>
    <string name="sec_10_forward">10 seconds forward</string>
    <string name="sec_10_back">10 seconds backward</string>
    <string name="live_indicator">video is live</string>
    <string name="time">time</string>
    <string name="tracks">tracks selection</string>
    <string name="compas">tap to center video</string>
    <string name="ad_close">X</string>
</resources>
